feat: include proof parse endpoint
